# home-assistant-retele-electrice

./: .gitignore  CHANGES.md  DASHBOARDS.md  LICENSE  README.md  hacs.json  pyproject.toml  test_api.py
.github/: dependabot.yml
.github/workflows/: hacs.yml  hassfest.yml  release.yml  test.yml
custom_components/retele_electrice/: __init__.py  _device.py  api.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.py  services.yaml  strings.json
custom_components/retele_electrice/translations/: en.json
tests/: conftest.py  test_api.py  test_coordinator.py  test_imports.py  test_services.py
tests/fixtures/: pod_info_RO005E510252818.full.html  pod_info_RO005E510252818.json  pod_info_RO005EXXXXXXXXX.json
